// Copyright 2016-2018, Pulumi Corporation.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "plugin.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

package pulumirpc;

service Runtime {
    rpc Construct(ConstructRequest) returns (ConstructResponse) {}
    // TODO: Add an Invoke to allow arbitary function execution
}

message ConstructRequest {
    string libraryPath = 1;
    string resource = 2;
    string name = 3;
    google.protobuf.Struct args = 4; 
    google.protobuf.Struct opts = 5; 
}

message ConstructResponse {
    google.protobuf.Struct outs = 1;
}
